Fixed bug that would not display flow-story arrows on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ td {
 .fuel-arrow {
   margin: 1.5rem 0rem;
   cursor: pointer;
+  width: 300px;
 }
 
 .fuel-spacer {
